--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "vite": "^5.4.19",
     "wait-on": "^9.0.3"
   },
-  "description": "**URL**: https://lovable.dev/projects/REPLACE_WITH_PROJECT_ID",
+  "description": "**URL**:",
   "main": "eslint.config.js",
   "keywords": [],
   "author": "",
